Project

General

Profile

Actions

Bug #63485

open

inaccessible bucket: Error reading IAM Policy: Terminate parsing due to Handler error.

Added by Casey Bodley 6 months ago. Updated 5 months ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
iam policy admin backport_processed
Backport:
quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

log shared from ceph-users mailing list:

req 13293029267332025583 0.000000000s s3:list_bucket Error reading IAM Policy: Terminate parsing due to Handler error.
req 13293029267332025583 0.000000000s s3:list_bucket init_permissions on :bucketname[1d0fa0b4-04eb-48f9-889b-a60de865ccd8.24143.10]) failed, ret=-13
req 13293029267332025583 0.000000000s op->ERRORHANDLER: err_no=-13 new_err_no=-13

it seems the bucket policy was uploaded successfully on an earlier ceph version, but can no longer be parsed on a recent quincy release

a user with --admin permissions was unable to delete the policy with aws s3api delete-bucket-policy because of this error. i think it's correct to deny access to normal users, but admin/system users should override it


Related issues 2 (2 open0 closed)

Copied to rgw - Backport #63772: quincy: inaccessible bucket: Error reading IAM Policy: Terminate parsing due to Handler error.In ProgressCasey BodleyActions
Copied to rgw - Backport #63773: reef: inaccessible bucket: Error reading IAM Policy: Terminate parsing due to Handler error.In ProgressCasey BodleyActions
Actions #1

Updated by Casey Bodley 6 months ago

  • Assignee set to Casey Bodley
Actions #2

Updated by Casey Bodley 5 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 54738
Actions #3

Updated by Casey Bodley 5 months ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot 5 months ago

  • Copied to Backport #63772: quincy: inaccessible bucket: Error reading IAM Policy: Terminate parsing due to Handler error. added
Actions #5

Updated by Backport Bot 5 months ago

  • Copied to Backport #63773: reef: inaccessible bucket: Error reading IAM Policy: Terminate parsing due to Handler error. added
Actions #6

Updated by Backport Bot 5 months ago

  • Tags changed from iam policy admin to iam policy admin backport_processed
Actions

Also available in: Atom PDF